--- a/scroll_animation/index.html
+++ b/scroll_animation/index.html
@@ -10,11 +10,11 @@
       crossorigin="anonymous"
     /> -->
     <link rel="stylesheet" href="./style.css" />
-    <title>Blurry Loading</title>
+    <title>My Project</title>
   </head>
   <body>
-    <section class="bg"></section>
-    <div class="loading-text">0%</div>
+    <h1>Project Starter</h1>
+
     <script src="script.js"></script>
   </body>
 </html>
